--- a/Kenyawide.html
+++ b/Kenyawide.html
@@ -353,23 +353,18 @@ display: none;
 </div>
 
 
-<div id="kenya-wide-analysis-.no_toc" class="section level1">
-<h1>Kenya-wide Analysis {: .no_toc }</h1>
 <div id="table-of-contents" class="section level2">
 <h2>Table of contents</h2>
-<p>{: .no_toc .text-delta }</p>
-<ol style="list-style-type: decimal">
-<li>TOC {:toc}</li>
-</ol>
+<p>{: .no_toc .text-delta } 1. TOC {:toc}</p>
 </div>
-<div id="analysis-question-analysis-question" class="section level2">
-<h2>Analysis Question {: #analysis-question}</h2>
+<div id="analysis-question" class="section level2">
+<h2>Analysis Question</h2>
 <p>Are farming/herding related conflicts a reflection climate
 conditions, a function of overall unrest? Or both? The steps and
 outcomes of this analysis are summarized below.</p>
 </div>
-<div id="data-preparation-data-preparation" class="section level2">
-<h2>Data Preparation {: #data-preparation}</h2>
+<div id="data-preparation" class="section level2">
+<h2>Data Preparation</h2>
 <ul>
 <li>Spatial match
 <ul>
@@ -412,9 +407,8 @@ farming related conflicts each year</li>
 climate data sets through time </em>
 </p>
 </div>
-<div id="model-building-model-building" class="section level2">
-<h2>Model Building {: #model-building}</h2>
-</div>
+<div id="model-building" class="section level2">
+<h2>Model Building</h2>
 </div>
 
 
