--- a/Kenyawide.html
+++ b/Kenyawide.html
@@ -401,13 +401,128 @@ farming related conflicts each year</li>
 </ul></li>
 </ul>
 <p align="center">
-<img role="img" aria-label="Farming conflicts vs climate anomalies over time" src="{{ &#39;conflict_v_climatedata.png&#39; | relative_url }}" width="500" height="300" alt="Farming conflicts vs climate anomalies over time">
+<img role="img" aria-label="Farming conflicts vs climate anomalies over time" src="{{ &#39;conflict_v_climatedata.png&#39; | relative_url }}" width="800" height="600" alt="Farming conflicts vs climate anomalies over time">
 <br> <em>Figure displaying the farming related conflicts against the two
-climate datasets through time.</em>
+climate data sets through time.</em>
 </p>
 </div>
 <div id="model-building" class="section level2">
 <h2>Model Building</h2>
+<p>Given that the data is time dependent, I conducted a timeseries
+analysis (using an AR1 model) to determine how well the different
+covariate data sets explains the farming conflict data. The following
+data streams were integrated as predictor variables: total conflicts,
+average precipitation anomaly, average temperature anomaly, year</p>
+<p>The models included all combinations of these variables. The models
+included:</p>
+<ul>
+<li>Full: farming conflict ~ total conflicts + average precipitation
+anomaly + average temperature anomaly + year#Unrest only: farming
+conflict ~ total conflicts</li>
+<li>Climate only: farming conflict ~ average precipitation anomaly +
+average temperature anomaly</li>
+<li>Precipitation only: farming conflict ~ average precipitation
+anomaly</li>
+<li>Temperature only: farming conflict ~ average temperature
+anomaly</li>
+<li>Unrest trend: farming conflict ~ total conflicts + year</li>
+<li>Climate trend: farming conflict ~ average precipitation anomaly +
+average temperature anomaly + year</li>
+<li>Precipitation trend: farming conflict ~ average precipitation
+anomaly + year</li>
+<li>Temperature trend: farming conflict ~ average temperature anomaly +
+year</li>
+<li>Trend only: farming conflict ~ year</li>
+</ul>
+</div>
+<div id="outcomes" class="section level2">
+<h2>Outcomes:</h2>
+<p>The analysis reveals that the top predictor of farming/water related
+conflicts is due to overall unrest in the country (i.e., the model had
+the highest AIC value). However, the climatic variable that best
+predicts the number of farming/water related conflicts is temperature
+(i.e., the 4th top model according to AIC). Where a higher temperature
+contributes to lower number of conflicts (i.e., had a negative slope in
+the model).</p>
+<p>The models and the respective AIC results are below. The AIC is a
+metric of how well the model fits the data, the lowest AIC represents
+the model that best fit the data, indicated with **</p>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Model</th>
+<th align="left">AIC</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Unrest only**</td>
+<td align="left">152</td>
+</tr>
+<tr class="even">
+<td align="left">Unrest trend</td>
+<td align="left">154</td>
+</tr>
+<tr class="odd">
+<td align="left">Full</td>
+<td align="left">155</td>
+</tr>
+<tr class="even">
+<td align="left">Temperature trend</td>
+<td align="left">174</td>
+</tr>
+<tr class="odd">
+<td align="left">Climate trend</td>
+<td align="left">175</td>
+</tr>
+<tr class="even">
+<td align="left">Trend only</td>
+<td align="left">177</td>
+</tr>
+<tr class="odd">
+<td align="left">Precipitation trend</td>
+<td align="left">179</td>
+</tr>
+<tr class="even">
+<td align="left">Temperature only</td>
+<td align="left">183</td>
+</tr>
+<tr class="odd">
+<td align="left">Precipitation only</td>
+<td align="left">183</td>
+</tr>
+<tr class="even">
+<td align="left">Climate only</td>
+<td align="left">185</td>
+</tr>
+</tbody>
+</table>
+<p align="center">
+<img role="img" aria-label="Farming conflicts vs climate anomalies over time" src="{{ &#39;Observed_vs_fitted_kenya.png&#39; | relative_url }}" width="800" height="600" alt="Farming conflicts vs climate anomalies over time">
+<br> <em> Displayed how well each of the models performed in predicting
+the data (farming conflict data shown in brown) </em>
+</p>
+<p>The analysis reveals that the top predictor of farming/water related
+conflicts is due to overall unrest in the country (i.e., the model had
+the highest AIC value). However, the climatic variable that best
+predicts the number of farming/water related conflicts is temperature
+(i.e., the 4th top model according to AIC). Where a higher temperature
+contributes to lower number of conflicts (i.e., had a negative slope in
+the model).</p>
+<p align="center">
+<img role="img" aria-label="Farming conflicts vs climate anomalies over time" src="{{ &#39;observed_vs_bestfit_kenya.png&#39; | relative_url }}" width="800" height="600" alt="Farming conflicts vs climate anomalies over time">
+<br> <em> Figure displaying the top model against the true data </em>
+</p>
+<p>The summary information from the model revealed that for the unrest
+only model, each 10 total conflicts is associated with the addition of
+0.75 farming conflicts (slope of the model)</p>
+</div>
+<div id="diagnostics" class="section level2">
+<h2>Diagnostics:</h2>
+<p align="center">
+<img role="img" aria-label="Farming conflicts vs climate anomalies over time" src="{{ &#39;Diagnostics_kenya_bestmod.png&#39; | relative_url }}" width="800" height="600" alt="Farming conflicts vs climate anomalies over time">
+<br> <em> Figure displaying the top model against the true data </em>
+</p>
 </div>
 
 
